--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -8,13 +8,12 @@ body {
     background-color: #2c394b;
     color: white;
     display: flex;
-    height: 20%;
+    height: 100px;
     padding: 10px;
     justify-content: space-between;
 }
 
 .header__img {
-    height: max-content;
     width: 200px;
     margin-top: 10px;
     margin-left: 10px;
